Added type LoadBalancner in carpooling-service

--- a/k8s-dev/carpooling-deployment.yaml
+++ b/k8s-dev/carpooling-deployment.yaml
@@ -57,7 +57,7 @@ metadata:
 spec:
   selector:
     app: carpooling
-#  type: LoadBalancer
+  type: LoadBalancer
 #  type: ClusterIP
   ports:
     - protocol: TCP
