Update carpooling-azure-pipeline.yml for Azure Pipelines

--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -38,8 +38,8 @@ stages:
       inputs:
         SonarQube: 'sonarcloud-carpooling'
         scannerMode: 'MSBuild'
-        projectKey: 'carpooling'
-        projectName: 'carpooling'
+        projectKey: 'ZhivkoDevOpsProjects_Carpooling'
+        projectName: 'Carpooling'
     - task: SonarQubeAnalyze@5
     - task: SonarQubePublish@5
       inputs:
