Update carpooling-azure-pipeline.yml for Azure Pipelines

--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -39,7 +39,7 @@ stages:
         SonarQube: 'sonarcloud-carpooling'
         scannerMode: 'MSBuild'
         projectKey: 'ZhivkoDevOpsProjects_Carpooling'
-        projectName: 'Carpooling'
+        projectName: 'carpooling'
     - task: SonarQubeAnalyze@5
     - task: SonarQubePublish@5
       inputs:
