Update carpooling-azure-pipeline.yml for Azure Pipelines

--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -40,6 +40,7 @@ stages:
         organization: 'carpooling'
         scannerMode: 'MSBuild'
         projectKey: 'zhivkodevopsprojects_carpooling'
+    - task: SonarCloudAnalyze@1
     - task: Docker@1
       inputs:
         containerregistrytype: 'Container Registry'
