--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,19 @@ plugins {
     id 'java'
     id 'java-library'
     id 'maven-publish'
+
+}
+
+plugins {
+    id "org.sonarqube" version "3.5.0.2730"
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "carpooling_telerikdevops"
+        property "sonar.organization", "carpooling"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 apply plugin: 'io.spring.dependency-management'
