--- a/carpooling-azure-pipeline.yml
+++ b/carpooling-azure-pipeline.yml
@@ -38,7 +38,7 @@ stages:
     - task: SonarCloudPrepare@1
       inputs:
         SonarCloud: 'SonarCloud'
-        organization: 'zhivkodevopsprojects'
+        organization: 'carpooling'
         scannerMode: 'CLI'
         configMode: 'manual'
         cliProjectKey: 'zhivkodevopsprojects_carpooling'
