--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,49 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
+# Build the project and run tests
+pool:
+  vmImage: ubuntu-latest
 stages:
 - stage: Build
-  displayName: Build image
-  jobs:
+  displayName: Scan
+  jobs:  
   - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
+    displayName: Build the application
     steps:
-    - task: Docker@2
-      displayName: Build an image
+
+    - task: Gradle@2
+      displayName: Gradle build
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        workingDirectory: ''
+        gradleWrapperFile: 'gradlew'
+        gradleOptions: '-Xmx3072m'
+        javaHomeOption: 'JDKVersion'
+        jdkVersionOption: '1.11'
+        jdkArchitectureOption: 'x64'
+        publishJUnitResults: true
+        testResultsFiles: '**/TEST-*.xml'
+        tasks: 'build'
+
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'SonarCloud'
+        organization: 'carpooling-test'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'carpooling-test_carpooling'
+        cliSources: 'src/main/java'
+        extraProperties: |
+          # Additional properties that will be passed to the scanner,
+          # Put one key=value per line, example:
+          # sonar.exclusions=**/*.bin
+          sonar.java.binaries= build/classes
+    - task: SonarCloudAnalyze@1
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '300'
+    - task: SnykSecurityScan@1
+      displayName: Scan for security vulnerabilities
+      inputs:
+        serviceConnectionEndpoint: 'snyk'
+        testType: 'app'
+        monitorWhen: 'always'
+        failOnIssues: false
+        projectName: carpooling
