--- a/run-tests.yml
+++ b/run-tests.yml
@@ -1,7 +1,7 @@
-trigger:
-  branches:
-    include:
-    - feature/*
+# trigger:
+#   branches:
+#     include:
+#     - feature/*
 pool:
   vmImage: ubuntu-latest
 stages:
