Update run-tests.yml for Azure Pipelines

--- a/run-tests.yml
+++ b/run-tests.yml
@@ -1,7 +1,8 @@
-# trigger:
-#   branches:
-#     include:
-#     - feature/*
+trigger:
+  branches:
+    exclude:
+    - development
+    - master
 pool:
   vmImage: ubuntu-latest
 stages:
